# cogniscience

./: .env.example  .gitignore  Cognitive_Paper.tex  README.md  docker-compose.yml  pyproject.toml  requirements.txt
experiments/: basic_simulation.py  benchmark_latency.py  inspect_knowledge_graph.py  streaming_demo_enhanced.py  streaming_demo_full.py  streaming_demo_preview.py  visualize_results.py
sql/: init.sql
src/cognigraph/: __init__.py  engine.py  generators.py  utils.py
src/cognigraph/dynamics/: __init__.py  dreaming.py  updates.py
src/cognigraph/energy/: __init__.py  functions.py  gradients.py  similarity.py
src/cognigraph/ingestion/: embeddings.py  text_processor.py
src/cognigraph/knowledge/: __init__.py  concepts.py
src/cognigraph/memory/: __init__.py  cache.py  graph.py  semantic_memory.py  vector.py
src/cognigraph/storage/: postgres_store.py
tests/: __init__.py  test_energy.py  test_gradients.py  test_memory.py  test_recency_features.py
visualization/: __init__.py  concept_viz.py  energy_plots.py  graph_viz.py  vector_space.py
